 20. New achievement type GROUPKILL
 21. Socials now support flags.  Initial flags for confirming, target confirming.
 22. New Property: Prop_MultiEffects, for stacking the same prop multiple times.
 23. Import, Export now support class, race, ability as specific object.
 24. New Mood: Silly
 35. Nwe items: GenCaravan, a land-based sailing ship, and GenGangline, for making mob follower teams
  
# Build 5.9.11.1 Release 02/26/2021
  Bug Fix Release:
  1. Fixed experience gains when EFFECTCXL is 0.
  2. Changed EFFECTCXL default back to 0.
  3. Fixed Enchanted Item mana-checks.
# Build 5.9.11 Release 02/20/2021
  1. a(n) is now official filter syntax for a/an
  2. Shutdown command now supports AT syntax to set a RL time certain.
  3. Languages now support a translation ID to assist shopkeepers with slang languages.
  4. New Locale: ShoreGrid
  5. Amputation can be done to player followers, with their permission.
  6. Look can now target items in open containers
  7. Prop_*Adjuster now supports ABLEPROFS and ABLELVLS, and will give log errors in arguments
  8. Socials now support qualifying zappermasks to use the social
  9. WILLQUALIFY now supports NOx syntax to filter OUT things.
 10. Building skills: exits now support exit descriptions, with @x1 to substitute next room display.
 11. GenAbility now supports customizable Target Fail message
 12. Player visitation is now tracked in the most recent instanced area, but still not saved to db.
 13. New faction change events: DYING, AREAEXPLORE, AREAASS, AREAKILL, and flag: RESTIME, and parm: WITHIN
 14. New misc ability: InstanceArea, for creating modified instances out of existing areas
 15. New achievement type: INSTANCEEXPIRE - for tying an achievement to having been in an instance
 16. ShopKeepers, et al can each of their own unique currency setting
 17. Scriptable MPGSET, STAT, etc.. now supports MAX char states (MAXHITS, etc)
 18. Achievements now support expiration/duration.