@@ -1,0 +1,3 @@
+<ITEMS><ITEM><ICLAS>GenCaravan</ICLAS><IUSES>100</IUSES><ILEVL>0</ILEVL><IABLE>2</IABLE><IREJV>0</IREJV><ITEXT>&lt;NAME&gt;a caravan [NEWNAME]&lt;/NAME&gt;&lt;DESC /&gt;&lt;DISP&gt;a caravan [NEWNAME] is here.&lt;/DISP&gt;&lt;PROP&gt;2|0|0|0|0|0|0|1.0|10000|0|16|&lt;/PROP&gt;&lt;IMG /&gt;&lt;BEHAVES /&gt;&lt;AFFECS /&gt;&lt;FLAG&gt;25&lt;/FLAG&gt;&lt;CLOSTX /&gt;&lt;DOORNM&gt;gangplank&lt;/DOORNM&gt;&lt;OPENNM&gt;open&lt;/OPENNM&gt;&lt;CLOSNM&gt;close&lt;/CLOSNM&gt;&lt;KEYNM&gt;UNNAMED_81764345#0&lt;/KEYNM&gt;&lt;OPENTK&gt;0&lt;/OPENTK&gt;&lt;IDENT /&gt;&lt;VALUE&gt;20000&lt;/VALUE&gt;&lt;MTRAL&gt;1328&lt;/MTRAL&gt;&lt;READ&gt;UNNAMED_81764345#0&lt;/READ&gt;&lt;WORNL&gt;false&lt;/WORNL&gt;&lt;WORNB&gt;512&lt;/WORNB&gt;&lt;CAPA&gt;0&lt;/CAPA&gt;&lt;CONT&gt;0&lt;/CONT&gt;&lt;OPENTK&gt;0&lt;/OPENTK&gt;&lt;SSAREA&gt;&lt;AREA&gt;&lt;ACLAS&gt;StdBoardableShip&lt;/ACLAS&gt;&lt;ANAME&gt;UNNAMED_81764345&lt;/ANAME&gt;&lt;ADESC /&gt;&lt;ACLIM&gt;-1&lt;/ACLIM&gt;&lt;ASUBS /&gt;&lt;ATECH&gt;3&lt;/ATECH&gt;&lt;ADATA&gt;&lt;ARCHP /&gt;&lt;PARENTS /&gt;&lt;CHILDREN /&gt;&lt;PREJFC /&gt;&lt;IGNMSK /&gt;&lt;BUDGET /&gt;&lt;DEVALR /&gt;&lt;INVRER&gt;0&lt;/INVRER&gt;&lt;CURRENCY /&gt;&lt;IPRICS /&gt;&lt;IMG /&gt;&lt;BEHAVES /&gt;&lt;AFFECS /&gt;&lt;AUTHOR /&gt;&lt;DISP /&gt;&lt;BLURBS /&gt;&lt;AATMO&gt;-1&lt;/AATMO&gt;&lt;/ADATA&gt;&lt;AROOMS&gt;&lt;AROOM&gt;&lt;ROOMID&gt;UNNAMED_81764345#0&lt;/ROOMID&gt;&lt;RAREA&gt;UNNAMED_81764345&lt;/RAREA&gt;&lt;RCLAS&gt;WoodenDeck&lt;/RCLAS&gt;&lt;RDISP&gt;The Deck&lt;/RDISP&gt;&lt;RDESC /&gt;&lt;RTEXT&gt;&lt;RCLIM&gt;-1&lt;/RCLIM&gt;&lt;RATMO&gt;-1&lt;/RATMO&gt;&lt;IMG /&gt;&lt;BEHAVES /&gt;&lt;AFFECS /&gt;&lt;/RTEXT&gt;&lt;ROOMEXITS&gt;&lt;/ROOMEXITS&gt;&lt;ROOMCONTENT&gt;&lt;ROOMMOBS /&gt;&lt;ROOMITEMS /&gt;&lt;/ROOMCONTENT&gt;&lt;/AROOM&gt;
+&lt;/AROOMS&gt;&lt;/AREA&gt;&lt;/SSAREA&gt;&lt;PORTID&gt;START&lt;/PORTID&gt;&lt;RIDET&gt;8&lt;/RIDET&gt;&lt;RIDEC&gt;1&lt;/RIDEC&gt;&lt;PUTSTR /&gt;&lt;MOUNTSTR /&gt;&lt;DISMOUNTSTR /&gt;&lt;STATESTR /&gt;&lt;STATESUBJSTR /&gt;&lt;RIDERSTR /&gt;&lt;OWNERID /&gt;&lt;PRICE&gt;1000&lt;/PRICE&gt;</ITEXT></ITEM>
+</ITEMS>
