@@ -25,6 +25,7 @@
  23. Import, Export now support class, race, ability as specific object.
  24. New Mood: Silly
  35. Nwe items: GenCaravan, a land-based sailing ship, and GenGangline, for making mob follower teams
+ 36. New common skill: CaravanBuilding, for, well, building caravans.
   
 # Build 5.9.11.1 Release 02/26/2021
   Bug Fix Release:
